# reference

./: .gitignore  website.md
Qt/: Qt.txt  Qt序列化.md
c-cpp/: cmake.md  cmake语法.txt  gdb调试.md  gdb调试.txt  google_test.md  库函数.md  库函数.txt  开发环境.md  模板.md
c-cpp/序列化/: serializer.h
documentation/: doxygen.md  uml.md
html/: css.md  html.md  test.html  test2.html  test3.html  test4.html
html/css/: common.css
markdown/: markdown.md  markdown语法.md  rst.md  test.md
os/linux/: Fedora.md  centos.md
program_language/assembly/: assembly.md
program_language/c-cpp/: boost.md  c-cpp.md  clang.md  cmake.md  cpp.md  gdb.md  gdb.py  gdbinit.sh  gdb调试.md  google_test.md  meson.md  stl.md  代码覆盖率.txt  库函数.md  开发环境.md  模板.md
program_language/go/: go.md
program_language/html/: html.md  item.html  test3.html  tree.html
program_language/java/: java.md
python/: python.md  python.txt
software/: summary.md
templates/: CMakeLists.txt
templates/code/boost-python/python-lib/: CMakeLists.txt  README.md  bptest.cpp  bptest.pyi  build.sh  family.cpp  family.h  setup.py  test.py
vim/: gvim.md  vim.md  vim快捷键.txt
vscode/: launch.json  settings.json  tasks.json  vscode.md  vscode.txt
work/: lsf.md  website.md  概念.md
其他/: west_plugin.md  浏览器.md
命令/: android.md  autohotkey.md  cshell.md  error_QA.md  ftp命令.md  git命令.md  git命令.txt  linux.md  linux命令.md  linux命令.txt  windows命令.md
开源/: list.md  poppler.md
环境/: cpp.md  cpp_env.md  gitlab.md  linux.md  tmux.md  windows.md  wsl.md  国内镜像.md  虚拟机.md
算法/: core.md  math.md  mess.md  rotate_and_mirror.py
软件/: summary.md
(+65 files in other folders)
